<resources>
    <string name="app_name">ArchiveCol</string>
    <string name="back_button">back Button</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="account">Already have any account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_category">Add Category</string>

</resources>