<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary_color"
    tools:context=".ui.SignUpPage">

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text_input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/Dark"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textColor="#000000"
        android:textColorHint="#838383"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text_input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/Dark"
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColor="#000000"
        android:textColorHint="#838383"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text_input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/Dark"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColor="#000000"
        android:textColorHint="#838383"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:autofillHints=""
        android:background="@drawable/rounded_text_input"
        android:drawablePadding="10dp"
        android:drawableTint="@color/Dark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        android:textColor="#000000"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="206dp"
        android:background="@drawable/rounded"
        android:text="Sign Up"
        android:textColor="@color/tertiary_color"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/account"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/log_in_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autoLink="web"
            android:text="Log In"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>